# mypass

./: README.md  pyproject.toml
mypass/: cli.py  crypto.py  crypto_utils.py  mfa.py  parser.py  search.py  security.py  session.py  storage.py
mypass/commands/: add.py  copy.py  delete.py  disable_mfa.py  enable_mfa.py  init.py  list.py  lock.py  search.py  setup.py  show.py  status.py
secure_mypass.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
