[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secure-mypass"
version = "0.1.0"
description = "Secure local terminal password manager"
readme = "README.md"
requires-python = ">=3.10"

authors = [
  {name = "Ravi K"}
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Environment :: Console",
]

[project.scripts]
mypass = "mypass.cli:main"